--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                       <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
                     </li>
                     <li class="nav-item">
-                      <a class="nav-link" href="contact.html">Contact-Info</a>
+                      <a class="nav-link active" href="contact.html">Contact-Info</a>
                     </li>
                     <!-- <li class="nav-item">
                       <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
@@ -52,7 +52,7 @@
                       </div>
                     </li> -->
                     <li class="nav-item">
-                      <a class="nav-link" href="converter.html">Conversion</a>
+                      <a class="nav-link active" href="formula.html">Conversion</a>
                     </li>
                   </ul>
                   <form class="form-inline my-2 my-lg-0">
